fix z-index of navbar items, hover effect on navitems

--- a/app/assets/stylesheets/navbar/navbar.scss
+++ b/app/assets/stylesheets/navbar/navbar.scss
@@ -13,7 +13,7 @@
   left: 0px;
   width: 100%;
   height: 60px;
-  z-index: 1;
+  z-index: 2;
   background-color: white;
   border-bottom: 2px solid lightgray;
 }
@@ -79,6 +79,15 @@
   font-size: 16px;
   font-weight: 450;
   padding: 10px 0px;
+  transition: all 0.1s ease 0s;
+  -webkit-transition: all 0.1s ease 0s;
+  -moz-transition: all 0.1s ease 0s;
+  -o-transition: all 0.1s ease 0s;
+
+  &:hover {
+    background-color: rgb(94, 94, 94);
+    color: white;
+  }
 }
 
 .nav_item_separator {
